force-app/main/default/objects/Phase_Transfer_Line_Item__c/Phase_Transfer_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Phase Transfer Line Item</label>
    <nameField>
        <label>Phase Transfer Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Phase Transfer Line Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>