force-app/main/default/objects/Phase_Transfer_Line_Item__c/fields/Destination_Project_Phase__c.field-meta.xml
<CustomField>
    <fullName>Destination_Project_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination Project Phase</label>
    <referenceTo>Project_Phase__c</referenceTo>
    <relationshipLabel>Phase Transfer Line Items</relationshipLabel>
    <relationshipName>Phase_Transfer_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>