force-app/main/default/objects/Phase_Transfer_Line_Item__c/fields/Inventory_Item__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Item</label>
    <referenceTo>Inventory_Item__c</referenceTo>
    <relationshipLabel>Phase Transfer Line Items</relationshipLabel>
    <relationshipName>Phase_Transfer_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>