force-app/main/default/objects/Phase_Transfer_Line_Item__c/fields/Source_Phase__c.field-meta.xml
<CustomField>
    <fullName>Source_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Phase</label>
    <referenceTo>Project_Phase__c</referenceTo>
    <relationshipLabel>Phase Transfer Line Items (Source Phase)</relationshipLabel>
    <relationshipName>Phase_Transfer_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>