force-app/main/default/objects/Phase_Transfer_Line_Item__c/fields/Transfer_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Item_Id__c</fullName>
    <displayFormat>TI-{000000}</displayFormat>
    <label>Transfer Item Id</label>
    <type>AutoNumber</type>
</CustomField>